traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
def estPosiFin():Boolean={
  if(getX()+1==getMondeHauteur() && getY()+1==getMondeLargeur()){return true}
	return false}


def avance(){
  x=getX()
  y=getY()
  X=getMondeLargeur()
  Y=getMondeHauteur()
  if(y==0 && x+1<X){setPos(0,y+1)}else if(x+1==X){setPos(y+1,Y-1)}else{setPos(x+1,y-1)}
}





override def run() {
  var diag = 0;
  var mark=0
  do{ecritMessage(mark)
     mark=mark+1
     avance()}while(!estPosiFin())
  ecritMessage(mark)
}